--- a/src/BasicAuthentication/Views/Roles/Create.cshtml
+++ b/src/BasicAuthentication/Views/Roles/Create.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@model Microsoft.AspNetCore.Identity.EntityFrameworkCore.IdentityRole
 
 <h2>Create Role</h2>
 @Html.ActionLink("List Roles", "Index") | @Html.ActionLink("Manage User Role", "ManageUserRoles")
@@ -15,7 +16,7 @@
         Role name
     </div>
     <p>
-        @Html.TextBox("RoleName")
+        @Html.TextBoxFor(model => model.Name)
     </p>
     <input type="submit" value="Save" />
 }
